# conquest-

./: .gitignore  CMakeLists.txt  README.md
src/: ai.cpp  ai.h  board.cpp  board.h  core.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  state_encoder.cpp  state_encoder.h  train_main.cpp  trainer.cpp  trainer.h
tools/: train_loader.py
